# obstacle-aware-clustering

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  testing_data.ipynb
data/: README.md
data/boundaries/: ellipse_scaled_xy.txt  lake_mead_boundary.csv  mead_boundary.csv  mead_boundary.geojson  snapped_path_lake_tahoe.txt  tahoe_boundary.csv
data/cached/: fire_projections.pkl  mead_basin_beta_sweep.pkl  mead_basin_spans_by_beta.pkl  mead_beta_sweep.pkl  mead_fire_projections.pkl  mead_nearshore_beta_sweep.pkl  mead_nearshore_spans_by_beta.pkl  near_shore_grid_search.pkl  near_shore_no_s_grid_search.pkl  tahoe_basin_beta_sweep.pkl  tahoe_basin_spans_by_beta.pkl  tahoe_fire_projections.pkl  tahoe_nearshore_beta_sweep.pkl  tahoe_nearshore_spans_by_beta.pkl  tier1_beta_sweep.pkl  tier1_objective_curve.pkl  tier1_seed_noise.pkl  tier2_grid_search.pkl  tier2_no_s_grid_search.pkl
data/processed/: X_full.npy  cluster_summary.csv  (+16 more)
notebooks/: 01_toy_problem_ellipse (4).ipynb  01_toy_problem_ellipse.ipynb  01_toy_problem_ellipse_old.ipynb  02_lake_boundary.ipynb  02_tahoe_wildfires_clustered.ipynb  03_clustering_wildfires.ipynb  03_clustering_wildfires_new.ipynb  03_clustering_wildfires_tier_version.ipynb  03_mead_wildfires_clustered.ipynb  04_arcgis_dashboard (1).ipynb  04_arcgis_dashboard.ipynb  04_clustering_environment.ipynb  04_results_webmap.ipynb  old_02_lake_boundary.ipynb  old_03_clustering_wildfires.ipynb  old_04_arcgis_dashboard_v2.ipynb  old_04_arcgis_dashboard_v3.ipynb  old_05_lake_mead_mvp.ipynb
report/: obstacle_aware_kmeans.tex
(+18 files in other folders)
